# ferrum

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .htaccess  .prettierrc.json  .taurignore  CHANGELOG.md  Cargo.toml  Missing  README.md  ToDo  build.rs  docker-compose.yml  eslint.config.mjs  generate-update-json.js  generate-update-json.mjs  home.php  index.html  index.php  itunes_fields.yml  package-lock.json  package.json  register.php  rollup.config.js  snowpack.config.js  svelte.config.js  tsconfig.json  vite.config.js  vite.config.mjs  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
.sass-cache/7606f85a0411ac911e8bd245f93950d410726a7f/: global.sassc  main.sassc
api/: Dockerfile  package.json
api/src/: db.js  resolvers.js  schema.js  server.js  serverold.js
api/src/modules/: db.js
api/src/schema/: resolvers.js
assets/: Logo.afdesign
css/: global backup.sass  global.css  global.css.map  global.sass  index.css  variables.sass
css/music/: index.css  index.sass
db/: Dockerfile
db/data/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ferrum_5.sdi  ib_buffer_pool  performance_sche_3.sdi  private_key.pem  public_key.pem  server-cert.pem  server-key.pem  sys_4.sdi  tablespaces.open.1  tablespaces.open.2
db/data/ferrum/: playlists.ibd  playlisttracks.ibd  sessions.ibd  tracks.ibd  users.ibd
db/data/mysql/: general_log_188.sdi  slow_log_189.sdi
db/data/performance_schema/: accounts_128.sdi  cond_instances_67.sdi  data_lock_waits_143.sdi  data_locks_142.sdi  events_errors_su_122.sdi  events_errors_su_123.sdi  events_errors_su_124.sdi  events_errors_su_125.sdi  events_errors_su_126.sdi  events_stages_cu_94.sdi  events_stages_hi_95.sdi  events_stages_hi_96.sdi  events_stages_su_100.sdi  events_stages_su_101.sdi  events_stages_su_97.sdi  events_stages_su_98.sdi  events_stages_su_99.sdi  events_statement_102.sdi  events_statement_103.sdi  events_statement_104.sdi  events_statement_105.sdi  events_statement_106.sdi  events_statement_107.sdi  events_statement_108.sdi  events_statement_109.sdi  events_statement_110.sdi  events_statement_111.sdi  events_statement_112.sdi  events_statement_113.sdi  events_transacti_114.sdi  events_transacti_115.sdi  events_transacti_116.sdi  events_transacti_117.sdi  events_transacti_118.sdi  events_transacti_119.sdi  events_transacti_120.sdi  events_transacti_121.sdi  events_waits_cur_68.sdi  events_waits_his_69.sdi  events_waits_his_70.sdi  (+61 more)
db/data/sys/: sys_config.ibd
examples/: repro.rs
ferrum-addon/: addon.d.ts  main.d.ts  main.ts  package.json
includes/: check_login.php  functions.php
js/: global.js
js/music/: index.js
mobile/: bindings.ts  package-lock.json  package.json  svelte.config.js  vite.config.ts
mobile/src/: app.html
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
mobile/src/lib/: commands.ts
mobile/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Library.svelte  layout.css
native/: .gitignore  Cargo.toml  index.node  package.json
native/src/: aac_decoder.rs  data.rs  data_js.rs  filter.rs  funcs.rs  js.rs  lib.rs  library.rs  library_types.rs  open_playlist.rs  page.rs  player.rs  playlists.rs  sidebar_view.rs  sort.rs  tracks.rs
native/src/tracks/: import.rs  md.rs  mod.rs  tag.rs
pages/: index.php
pages/music/: index-old.php  index.php
public/: index.html
src/: App.svelte  app.css  electron.js  index.html  main.js  main.ts  preload.js  variables.js  variables.json  variables.mjs
src-native/: artists.rs  data.rs  data_js.rs  filter.rs  itunes_import.rs  js.rs  lib.rs  library.rs  library_import.rs  library_types.rs  page.rs  playlists.rs  queue_state.rs  sidebar_view.rs  sort.rs  view_options.rs
src-native/tests/: Library.xml
src-native/tracks/: cover.rs  import.rs  md.rs  mod.rs  tag.rs
src/assets/: fonts.css
src/components/: ArtistList.svelte  Button.svelte  CheckForUpdates.svelte  Cover.svelte  DragGhost.svelte  Filter.svelte  Header.svelte  ItunesImport.svelte  Lyrics.svelte  Modal.svelte  Player.svelte  PlaylistInfo.svelte  Queue.svelte  QueueItem.svelte  QuickNav.svelte  Settings.svelte  Sidebar.svelte  SidebarItems.svelte  Slider.svelte  Titlebar.svelte  TrackInfo.svelte  TrackList.svelte  TrackListOld.svelte  TrackListRoute.svelte  VirtualList.svelte  VirtualListBlock.svelte  VirtualListItemed.svelte
src/electron/: import_itunes.js  import_itunes.ts  ipc.js  ipc.ts  is.js  is.ts  main.ts  menubar.js  menubar.ts  preload.js  preload.mts  preload.ts  shortcuts.js  shortcuts.ts  typed_ipc.ts  types.d.ts  update.ts
src/lib/: Route.svelte  data.ts  drag-drop.ts  error.ts  helpers.ts  libraryTypes.ts  lyrics.svelte.ts  menus.ts  modals.ts  page.ts  player.svelte.ts  player.ts  queue.ts  quit.ts  router.ts  scroll.ts  selection-new.ts  selection.ts  trackInfo.ts  virtual-grid.svelte.ts  virtual-grid.ts  vis.ts  window.ts
src/lib/visualizer/: ShaderToyLite.js  ShaderToyLite.ts  Visualizer.svelte  visualizer.ts
src/scripts/: addon.js  fix_play_time.js  formatting.ts  handy.js  helpers.ts  import_itunes.js  paths.js
src/stores/: contextMenu.ts  data.ts  library.js  libraryTypes.ts  player.js  player.ts  playerOld.js  queue.ts  quit.ts  selection.ts  trackInfo.ts  view.js  viewOld.js  window.ts
types/: static.d.ts
web/: Dockerfile  package.json
web/src/: README.md  compile.js  index.php  nodemon.json  package.json  server.js  template.html
web/src/covers/: qjmwd3u3qr
web/src/css/: global.css  global.sass  index.css  variables.sass
web/src/modules/: compile.js  elastic-queries.js  elastic.js  passport.js  routes.js
web/src/pug/: 404.pug  (+5 more)
web/srcold/: index.php
web1/: package.json
web1/src/: server.js
webold/: .htaccess  Dockerfile  index.php  package.json
webold/src/: nodemon.json  pug.js  server.js
weboldnode/src/: server.js
weboold/src/: package.json
website/: package-lock.json  package.json  svelte.config.js  vite.config.ts
website/src/: app.html
website/static/: site.webmanifest
(+83 files in other folders)
