[package]
name = "ferrum"
publish = false
build = "build.rs"
edition = "2024"
exclude = ["artifacts.json"]

[lib]
path = "src-native/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.2"

[dependencies]
napi = { version = "3.3", features = [
	"serde-json",
	"napi6",
	"tokio_rt",
	"async",
	"anyhow",
] }
napi-derive = "3.2"
serde = { version = "1.0", features = ["derive"] }
lofty = "0.22"
serde_json = "1.0"
nanoid = "0.4"
alphanumeric-sort = "1.5"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
atomicwrites = "0.4"
trash = "5.1"
plist = "1.5"
tokio = { version = "1.28", features = ["macros"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
url = "2.4"
unicode-normalization = "0.1"
rayon = "1.8"
lazy_static = "1.5.0"
fast_image_resize = { version = "5.1", features = ["image"] }
image = { version = "0.25.2", features = [
	"png",
	"jpeg",
], default-features = false }
redb = "2.1.3"
anyhow = "1.0.89"
dirs-next = "2.0.0"
chrono = "0.4.42"
