[package]
name = "ferrum"
version = "0.7.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json"]

[lib]
name = "ferrum"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1.0.1"

[dependencies]
napi = { version = "1.1.3", features = ["serde-json", "napi4"] }
napi-derive = "1.0.0"
dirs = "3.0.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_repr = "0.1.6"
id3 = "0.6.4"
mp3-metadata = "0.3.3"
mp4ameta = "0.11.0"
serde_json = "1.0.62"
nanoid = "0.4.0"
alphanumeric-sort = "1.4.0"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
atomicwrites = "0.3.0"
