[package]
name = "ferrum"
version = "private"
publish = false
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json"]

[lib]
name = "ferrum"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1.0.1"

[dependencies]
napi = { version = "2.0.2", features = ["serde-json", "napi4"] }
napi-derive = "2.0.1"
dirs = "4.0.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_repr = "0.1.7"
id3 = "0.6.6"
mp3-metadata = "0.3.3"
mp4ameta = "0.11.0"
serde_json = "1.0.73"
nanoid = "0.4.0"
alphanumeric-sort = "1.4.3"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
atomicwrites = "0.3.0"
trash = "2.0.2"
base64 = "0.13.0"
